# Sama-Link

./: .env.example  .gitignore  README.md
backend/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/app/: main.py
backend/app/ai/contracts/: base.py
backend/app/ai/exceptions/: base.py
backend/app/ai/gateway/: gateway.py
backend/app/ai/parsers/: response_parser.py
backend/app/ai/validators/: response_validator.py
backend/app/api/v1/: analysis.py
backend/app/application/commands/: models.py
backend/app/application/dto/: models.py
backend/app/application/exceptions/: base.py
backend/app/application/interfaces/: services.py
backend/app/application/queries/: models.py
backend/app/core/: config.py  exceptions.py  logging.py
backend/app/decision/exceptions/: base.py
backend/app/decision/models/: base.py
backend/app/decision/policies/: base.py
backend/app/decision/services/: engine.py
backend/app/domain/entities/: case.py  event.py  incident.py
backend/app/domain/enums/: base.py
backend/tests/: test_main.py
backend/tests/ai/: test_ai_gateway.py
backend/tests/api/: test_analysis.py
backend/tests/application/: test_commands.py  test_dto.py  test_queries.py
backend/tests/decision/: test_decision_engine.py
backend/tests/domain/: test_entities.py  test_enums.py  test_value_objects.py
backend/tests/ports/: test_ports.py
backend/tests/risk/: test_risk_engine.py
backend/tests/understanding/: test_gemini_provider.py  test_understanding.py
backend/tests/workflow/: test_workflow.py
docs/: 01_PRODUCT.md  (+5 more)
(+229 files in other folders)
